--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,46 +1,29 @@
+* {
+    margin: 0;
+
+    --light-gray: rgb(218, 218, 218);
+}
+
+html {
+    height: 100%;
+}
+
 body {
+    min-height: 100%;
     margin: 0;
     box-sizing: border-box;
 }
 
-#navbar {
-    width: 100%;
-    height: 4rem;
+.center-row {
     display: flex;
-    justify-content: space-between;
-    border-bottom: solid 1px rgb(199, 199, 199);
-    align-items: center;
-}
-
-.link-container {
-    min-width: 6rem;
-    height: 4rem;
-    line-height: 4rem;
-    width: 40%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-
-.nav-link {
-    color: black;
-    text-decoration: none;
-    text-align: center;
-}
-
-.nav-link:hover {
-    background-color: rgb(218, 218, 218);
-}
-
-.user-container {
-    width: 4.5rem;
-    display: flex;
-    align-items: center;
     justify-content: center;
-    height: 100%;
-    gap: .2rem
+    align-items: center;
+    flex-direction: row;
 }
 
-.user-container:hover {
-    background-color: rgb(218, 218, 218);
-    cursor: pointer;
+.center-column {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
