--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,5 +1,9 @@
 #navbar {
-    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
     height: 4rem;
     display: flex;
     justify-content: space-between;
