--- a/public/css/search-result.css
+++ b/public/css/search-result.css
@@ -6,6 +6,7 @@
 
 .result-link {
   text-decoration: none;
+  width: 100%;
 }
 
 .search-result {
@@ -15,6 +16,7 @@
   padding: .4rem; 
   cursor: pointer;
   transition: background-color 0.075s;
+  justify-content: space-between;
 }
 
 .search-result:hover {
@@ -43,4 +45,11 @@
   margin-top: -.6rem;
   justify-content: start;
   gap: 1rem;
+}
+
+.favorite-button {
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
+  margin-right: 1rem;
+  cursor: pointer;
 }
